# ci-exercice-zw2812

./: .pre-commit-config.yaml  CHANGELOG.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
src/unc/: __init__.py
tests/: test_labunc.py  test_stdunc.py
