[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unc"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "typing_extensions; python_version < '3.11'"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "hypothesis",
    "uncertainties"
]

[tool.hatch.build.targets.wheel]
packages = ["src/unc"]

docs = [
    "sphinx",
    "furo",
    "myst-parser"
]

